# FastApiWeather

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024_05_01_1951-8caed416d8db_create_user_table.py  2024_05_01_2008-ffae8298ddb9_create_user_table.py  2024_05_08_0156-cc990074fcdc_add_new_columns_to_users_table.py
app/auth/: config.py  schemas.py  user_operations.py  utils.py  views.py
app/auth/utils/: auth_operations.py  exceptions.py  users_operations.py
app/db/: config.py
app/users/: exceptions.py  models.py  permissions.py  schemas.py  views.py
app/users/management/: users.py
app/users/queries/: crud.py  dependecies.py
